@@ -124,8 +124,16 @@ zctx_destroy (zctx_t **self_p)
     if (*self_p) {
         zctx_t *self = *self_p;
         while (zlist_size (self->sockets)) {
+            //  Set LINGER on the socket as specified by the ctx linger
             void *socket = zlist_first (self->sockets);
             zsockopt_set_linger (socket, self->linger);
+            //  Handle issue 134 by removing any remaining frames on the
+            //  socket (otherwise we get a crash)
+            while (zsockopt_rcvmore (socket)) {
+                zframe_t *frame = zframe_recv (socket);
+                zframe_destroy (&frame);
+            }
+            //  Now it's safe to close the socket...
             zmq_close (socket);
             zlist_remove (self->sockets, socket);
         }
